# rs-csv

./: .bench-baseline.json  .bench-full.json  .gitignore  .oxlintrc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: classify.rs  infer.rs  lib.rs  parse_common.rs  parse_quoted_str.rs  parse_quoted_typed.rs  parse_typed.rs  scan_positions.rs  shared.rs
crates/napi/: Cargo.toml  index.d.ts
crates/napi/src/: lib.rs
crates/wasm/: Cargo.toml  patch-pkg.mjs
crates/wasm/src/: lib.rs
