[package]
name = "rs-csv-napi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rs-csv-core = { path = "../core" }
memchr = { workspace = true }
napi = { version = "3", features = ["napi8", "compat-mode"] }
napi-derive = { version = "3", features = ["compat-mode"] }

[build-dependencies]
napi-build = "2"
